# MagboltzBind

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  LICENSE  README.md
cmake/: CMakeLists.txt  MagboltzBindConfig.cmake.in
example/: Argon100.fin  Argon90CO210.fin  CMakeLists.txt
libMagboltz/: CMakeLists.txt
libMagboltz/include/Magboltz/: magboltz  magboltz.h
libMagboltz/src/: magboltz.f
libMagboltz/test/: CMakeLists.txt  MagboltzLibTest.cpp
